add getBookmarks function
